--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser-dynamic": "~12.2.0",
     "@angular/router": "~12.2.0",
     "@auth0/angular-jwt": "^5.0.2",
+    "@ngrx/store": "^12.4.0",
     "crypto": "^1.0.1",
     "crypto-browserify": "^3.12.0",
     "json-server": "^0.16.3",
