--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "symbol-observable": "^4.0.0",
     "tslib": "^2.3.0",
     "util": "^0.12.4",
+    "uuid": "^8.3.2",
+    "uuidv4": "^6.2.12",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
