--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "json-server": "^0.16.3",
     "jsonwebtoken": "^8.5.1",
     "jwt-decode": "^3.1.2",
+    "ngx-mask": "^12.0.0",
     "rxjs": "~6.6.0",
     "stream": "^0.0.2",
     "symbol-observable": "^4.0.0",
